Fixed content alignment

--- a/hfoote.css
+++ b/hfoote.css
@@ -108,8 +108,8 @@ body {
 .page { /* for the main content of each page, a flex container with a maximum width */
 	display: flex;
 	flex-direction: column;
-	max-width: 500px;
-	align-content: center;
+	max-width: 800px;
+	justify-content: center;
 }
 
 .page p {
